--- a/src/config/sidebar.yml
+++ b/src/config/sidebar.yml
@@ -2,19 +2,9 @@
 
 - label: 'Introduction'
   link: '/'
-- label: 'Getting started'
-  link: '/getting-started'
-- label: Usage
+- label: Screen reader Demo
   items:
-    - label: 'Creating docs'
-      link: '/usage/creating-docs'
-    - label: 'Navigation'
-      link: '/usage/navigation'
-    - label: 'Shadowing'
-      link: '/usage/shadowing'
-- label: More
-  items:
-    - label: FAQ
-      link: /faq
-    - label: 'Github'
-      link: https://github.com/rocketseat/gatsby-themes
+    - label: The Basics - Role, Name, Value and State
+      link:  '/principles'
+    - label: Links and Resources
+      link:  '/resources'
